@@ -1,3 +1,10 @@
+2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
+	* General/NSUserDefaults+Colors.[hm]: add -doubleForKey:
+	  and -setDouble:forKey: methods (should change file name as
+	  it doesn't only deal with colors.
+	* SpaceTime/DrawView.m: save and restore time scale in defaults
+	  database
+
 2005-01-23 (1.3.1) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
 	* Add Makfiles to compile the documentation
 	* Remove undefined references in lang-paje
